# resume-pilot

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
examples/: autonomous-policy.example.json
ops/fixtures/: boss_inbox.html  boss_jobs.html
ops/remote/: README.md  autonomous_apply.py  bootstrap_debian.sh  smoke.sh  start-browser.sh  start-novnc.sh  start-vnc.sh
src/resume_pilot/: __init__.py  __main__.py  boss.py  browser.py  cdp.py  cli.py  config.py  llm.py  models.py  runner.py  state.py
tests/: test_boss_adapter.py  test_browser.py  test_cdp.py  test_cli.py  test_config.py  test_llm.py  test_remote_autonomous_apply.py  test_runner.py  test_state.py
