[project]
name = "resume-pilot"
version = "0.1.0"
description = "A browser-controlled, LLM-first resume matching and application pilot."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.15.0,<5",
    "playwright>=1.60.0,<2",
    "websockets>=16.0",
]

[project.scripts]
resume-pilot = "resume_pilot.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.1.0,<10",
    "ruff>=0.15.18,<0.16",
]

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
